more files, but puppetmaster not runnning :(

--- a/puppetlabs/code/hieradata/node/maxaldunate2.mylabserver.com.yaml
+++ b/puppetlabs/code/hieradata/node/maxaldunate2.mylabserver.com.yaml
@@ -1,3 +1,4 @@
 ---
+hierademo::domain_name: parameterdemo.linuxacademy.com
 domain_name: maxaldunate2.mylabserver.com
 api_key: maxaldunate2_api_key
