--- a/puppet/puppet.conf
+++ b/puppet/puppet.conf
@@ -8,16 +8,16 @@
     app_management = true
     module_groups = base+pe_only
     environmentpath = /etc/puppetlabs/code/environments
-    basemodulepath = /etc/puppetlabs/code/modules
+    #basemodulepath = /etc/puppetlabs/code/modules
 
 [agent]
     graph = true
     
 
 [master]
-    node_terminus = classifier
-    storeconfigs = true
-    storeconfigs_backend = puppetdb
-    reports = puppetdb
-    certname = puppetmaster
-    always_cache_features = true
+node_terminus = classifier
+storeconfigs = true
+storeconfigs_backend = puppetdb
+reports = puppetdb
+certname = puppetmaster
+always_cache_features = true
